--- a/NNFL Assignment 1/NNFL_Assignment1/Assignment1.ipynb
+++ b/NNFL Assignment 1/NNFL_Assignment1/Assignment1.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -405,13 +405,45 @@
     "    Output: return the difference between 3rd highest and 3rd lowest value of col (NOT THE ABSOLUTE VALUE). Round to 2 decimal\n",
     "            places\n",
     "    \"\"\"\n",
+    "    d = pd.Series(col)\n",
+    "    return (d.nlargest(3).iloc[-1] - d.nsmallest(3).iloc[-1]).round(2)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "  #  raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sample test case\n",
+      "object\n",
+      "25.21\n",
+      "0.29\n",
+      "25.21\n",
+      "Sample test case passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "#My Test Cases\n",
+    "\n",
+    "print(\"Running sample test case\")\n",
+    "diff = 25.21\n",
+    "print(data['A2'].dtype)\n",
+    "if(data['A3'].dtype!=np.object):\n",
+    "    print( getRange(data['A3']))\n",
+    "print(\"Sample test case passed\")\n",
+    "# Self testing material to be tested further later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -426,7 +458,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sample test case\n",
+      "Sample test case passed\n"
+     ]
+    }
+   ],
    "source": [
     "# do not change code here\n",
     "### SAMPLE TEST CASE\n",
@@ -490,6 +531,8 @@
     "    Input: col is a pandas series object corresponding to a certain column\n",
     "    Output: return the average of all the values in that attribute to 2 decimal places\n",
     "    \"\"\"\n",
+    "    d = pd.Series(col)\n",
+    "    return d.mean()\n",
     "    # YOUR CODE HERE\n",
     "    raise NotImplementedError()"
    ]
